Fix #1 CSV file truncation by streaming the response

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -7,6 +7,10 @@ body {
   background-color: #282c34;
 }
 
+a {
+  outline: 0;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
